# file-organizer-cli-tool

./: Cargo.toml  LICENSE  README.md
src/: config.rs  log.rs  main.rs  utils.rs
