[package]
name = "tidy-files"
version = "0.1.2"
edition = "2024"
authors = ["Prayash Shakya prayashshakya20@gmail.com"]
description = "A fast, safe CLI tool to organize files into categorized folders"
readme = "README.md"
homepage = "https://github.com/praya-sh/file-organizer-cli-tool"
repository = "https://github.com/praya-sh/file-organizer-cli-tool"
license = "MIT"
keywords = ["cli", "file-organizer", "filesystem", "utility", "productivity"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
toml = "0.8"
dirs = "6.0"

[[bin]]
name = "tidy"
path = "src/main.rs"